--- a/decidim-module-gdynia/config/locales/pl.yml
+++ b/decidim-module-gdynia/config/locales/pl.yml
@@ -17,6 +17,9 @@ pl:
         index:
           new_post: 'Nowy post'
     admin:
+      participatory_space_private_users:
+        edit:
+          title: Edytuj użytkownika
       moderations:
         report:
           reasons:
