--- a/decidim-module-gdynia/config/locales/pl.yml
+++ b/decidim-module-gdynia/config/locales/pl.yml
@@ -1,6 +1,47 @@
 ---
 pl:
+  activerecord:
+    models:
+      decidim:
+        meetings:
+          meeting:
+            text: "Spotkania"
   decidim:
+    download_your_data:
+      show:
+        type: Typ
+    endorsers_list:
+      others: Polubione przez
+    surveys:
+      surveys:
+        count:
+          surveys_count: Ankiety
+    debates:
+      admin:
+        debates:
+          form:
+            comments_visualization: Komentarze
+    statistics:
+      surveys_count: Ankiety
+    blogs:
+      posts:
+        index:
+          new_post: 'Nowy post'
+    admin:
+      newsletters:
+        select_recipients_to_deliver:
+          select_users_general: Wybierz użytkowników
+      participatory_space_private_users:
+        edit:
+          title: Edytuj użytkownika
+      moderations:
+        report:
+          reasons:
+            parent_hidden: Zawartość nadrzędna została ukryta
     components:
+      debates:
+        settings:
+          global:
+            taxonomy_filters: Filtry dla taksonomii
       gdynia:
         name: Gdynia
