LIS-80-Widok-procesu

--- a/decidim-module-gdynia/config/locales/pl.yml
+++ b/decidim-module-gdynia/config/locales/pl.yml
@@ -15,6 +15,9 @@ pl:
             text: "Spotkania"
   decidim:
     participatory_processes:
+      participatory_processes:
+        description:
+          contact: Kontakt
       admin:
         participatory_processes:
           form:
