feat: restore EU footer (LIS-78)

--- a/decidim-module-gdynia/config/locales/pl.yml
+++ b/decidim-module-gdynia/config/locales/pl.yml
@@ -20,6 +20,10 @@ pl:
         meetings:
           meeting:
             text: "Spotkania"
+  layouts:
+    decidim:
+      footer:
+        ue_logotypes: Logotypy Unii Europejskiej
   decidim:
     assemblies:
       assemblies:
