feat: add custom footer links to terms of service, accessibility declaration, privacy policy, gdpr, contact (LIS-88)

--- a/decidim-module-gdynia/config/locales/pl.yml
+++ b/decidim-module-gdynia/config/locales/pl.yml
@@ -24,6 +24,11 @@ pl:
     decidim:
       footer:
         ue_logotypes: Logotypy Unii Europejskiej
+        terms_of_service: Regulamin
+        accessibility_declaration: Deklaracja dostępności
+        privacy_policy: Polityka prywatności
+        gdpr: RODO
+        contact: Kontakt
   decidim:
     assemblies:
       assemblies:
