Tłumaczenia dla zakladki Moje dane

--- a/decidim-module-gdynia/config/locales/pl.yml
+++ b/decidim-module-gdynia/config/locales/pl.yml
@@ -81,6 +81,97 @@ pl:
           form:
             hashtag_help: "Należy wpisać tylko jeden hashtag bez znaku # np. dialoggdynia"
     download_your_data:
+      help:
+        follows:
+          id: ID obserwowania
+          followable: Obserwowany zasób (typ i identyfikator)
+          created_at: Data utworzenia obserwowania
+          updated_at: Data ostatniej aktualizacji obserwowania
+        messaging_conversations:
+          id: ID rozmowy
+          messages: Wiadomości w rozmowie
+          created_at: Data utworzenia rozmowy
+          updated_at: Data ostatniej aktualizacji tej rozmowy
+        notifications:
+          id: ID powiadomienia
+          resource_type: Typ zasobu, którego dotyczy powiadomienie
+          event_name: Nazwa zdarzenia
+          event_class: Klasa zdarzenia (typ techniczny)
+          created_at: Data utworzenia powiadomienia
+          updated_at: Data ostatniej aktualizacji powiadomienia
+          extra: Dodatkowe dane powiadomienia
+        users:
+          id: ID użytkownika
+          email: Adres e-mail
+          name: Imię i nazwisko
+          nickname: Pseudonim
+          locale: Język (ustawienia użytkownika)
+          newsletter_notifications_at: Data i godzina subskrypcji tego uczestnika do newslettera
+          notifications_sending_frequency: Częstotliwość wysyłania powiadomień
+          admin: Administrator
+          personal_url: Prywatny adres URL
+          about: Opis profilu tego uczestnika
+          invitation_created_at: Data utworzenia zaproszenia
+          invitation_sent_at: Data wysłania zaproszenia
+          invitation_accepted_at: Data akceptacji zaproszenia
+          invited_by: Zaproszony przez (ID użytkownika)
+          invitations_count: Liczba zaproszeń
+          reset_password_sent_at: Data wysłania instrukcji resetu hasła
+          remember_created_at: Data utworzenia „zapamiętaj mnie"
+          sign_in_count: Liczba logowań
+          current_sign_in_at: Data i godzina bieżącego logowania
+          last_sign_in_at: Data i godzina poprzedniego logowania
+          current_sign_in_ip: Adres IP bieżącego logowania
+          last_sign_in_ip: Adres IP poprzedniego logowania
+          created_at: Data utworzenia konta
+          updated_at: Data ostatniej aktualizacji konta
+          confirmed_at: Data potwierdzenia adresu e-mail
+          confirmation_sent_at: Data wysłania instrukcji potwierdzenia
+          unconfirmed_email: Niepotwierdzony adres e-mail
+          managed: Konto zarządzane
+          officialized_at: Data nadania statusu oficjalnego
+          officialized_as: Nazwisko urzędnika (radca, burmistrz itd.)
+          roles: Role użytkownika
+          accepted_tos_version: Zaakceptowana wersja regulaminu
+          following_count: Liczba obserwowanych zasobów
+          followers_count: Liczba uczestników, którzy obserwują tego użytkownika
+          password_updated_at: Data ostatniej zmiany hasła
+
+        proposals:
+          id: ID propozycji
+          taxonomies: Taksonomie (kategorie/etykiety)
+          participatory_space: Przestrzeń partycypacyjna
+          component: Komponent
+          title: Tytuł
+          body: Treść
+          address: Adres
+          latitude: Szerokość geograficzna
+          longitude: Długość geograficzna
+          state: Status
+          state_published_at: Data publikacji statusu
+          reference: Numer referencyjny
+          answer: Odpowiedź
+          answered_at: Data udzielenia odpowiedzi
+          votes: Głosy
+          endorsements: Rekomendacje
+          comments: Komentarze
+          attachments: Załączniki
+          follows_count: Liczba obserwujących
+          published_at: Data publikacji
+          url: Link (URL)
+          meeting_urls: Linki do spotkań
+          related_proposals: Powiązane propozycje
+          is_amend: Czy jest poprawką
+          original_proposal: Propozycja oryginalna
+          withdrawn: Wycofana
+          withdrawn_at: Data wycofania
+          created_at: Data utworzenia
+          updated_at: Data ostatniej aktualizacji
+          created_in_meeting: Utworzona podczas spotkania
+          coauthorships_count: Liczba współautorów
+          cost: Koszt
+          cost_report: Raport kosztów
+          execution_period: Okres realizacji
       show:
         meetings: Spotkania
         expiration: Data ważności
@@ -106,6 +197,9 @@ pl:
         index:
           new_post: "Nowy post"
     admin:
+      taxonomies:
+        table:
+          to_next_page: Następna strona
       newsletters:
         select_recipients_to_deliver:
           select_users_general: Wybierz użytkowników
